[package]
name = "jail-cli"
version = "0.1.0"
edition = "2021"
description = "Sandboxed dev environments via containers"
license = "MIT"

[[bin]]
name = "jail"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
directories = "5"
anyhow = "1"
which = "7"
colored = "2"
dirs = "6"
dialoguer = "0.11"
